--- a/home-page/html/work-schedule.html
+++ b/home-page/html/work-schedule.html
@@ -534,7 +534,7 @@
         <a href="work-schedule.html" id="work-schedule-link" class="sidebar-link active">
           <i class="fas fa-calendar-alt"></i> Lịch Làm Việc
         </a>
-        <a href="work-shift-log.html" id="work-shift-log-link" class="sidebar-link active hidden">
+        <a href="work-shift-log.html" id="work-shift-log-link" class="sidebar-link hidden">
           <i class="fas fa-clock"></i> Lịch Sử Chấm Công
         </a>
         <a href="home.html" id="home-link" class="sidebar-link">
