--- a/customer/payment.html
+++ b/customer/payment.html
@@ -1,111 +1,530 @@
 <!DOCTYPE html>
 <html lang="vi">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Giao diện thanh toán FoodHub</title>
+    <title>Payment System</title>
     <style>
         body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f5f5f5;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: linear-gradient(135deg, #ff9a56 0%, #ffad7a 50%, #ffc3a0 100%);
             margin: 0;
             padding: 20px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
             min-height: 100vh;
         }
+
         .container {
-            background-color: #ffffff;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            width: 100%;
-            max-width: 500px;
-            padding: 20px;
+            max-width: 600px;
+            margin: 0 auto;
+            background: white;
+            border-radius: 20px;
+            padding: 35px;
+            box-shadow: 0 15px 35px rgba(255, 154, 86, 0.3);
+            border: 2px solid #ffe4d6;
         }
-        h2 {
-            color: #ff6200;
+
+        h1 {
             text-align: center;
-            margin-bottom: 20px;
-        }
-        .order-summary, .payment-methods {
-            margin-bottom: 20px;
-        }
-        .order-summary h3, .payment-methods h3 {
             color: #333;
-            font-size: 18px;
-            margin-bottom: 10px;
+            margin-bottom: 30px;
+            font-size: 2.5em;
+            background: linear-gradient(45deg, #ff6b35, #f7931e);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            text-shadow: 0 2px 4px rgba(255, 107, 53, 0.1);
         }
+
+        .order-info {
+            background: linear-gradient(145deg, #fff5f0, #ffe4d6);
+            padding: 25px;
+            border-radius: 15px;
+            margin-bottom: 30px;
+            border: 1px solid #ffd4ba;
+            box-shadow: 0 4px 12px rgba(255, 154, 86, 0.1);
+        }
+
+        .order-info h3 {
+            color: #cc4125;
+            margin-bottom: 15px;
+            font-weight: 600;
+        }
+
         .order-item {
             display: flex;
             justify-content: space-between;
-            padding: 10px 0;
-            border-bottom: 1px solid #eee;
+            padding: 12px 0;
+            border-bottom: 1px solid #ffd4ba;
         }
+
         .order-item:last-child {
             border-bottom: none;
-        }
-        .total {
             font-weight: bold;
-            color: #ff6200;
+            color: #ff6b35;
+            font-size: 1.1em;
         }
-        .payment-methods label {
-            display: block;
-            margin: 10px 0;
+
+        .payment-methods {
+            margin-bottom: 30px;
+        }
+
+        .payment-methods h3 {
+            color: #cc4125;
+            margin-bottom: 20px;
+            font-weight: 600;
+        }
+
+        .payment-method {
+            display: flex;
+            align-items: center;
+            background: linear-gradient(145deg, #fff8f5, #ffede1);
+            padding: 20px;
+            border-radius: 15px;
+            margin-bottom: 15px;
             cursor: pointer;
+            transition: all 0.3s ease;
+            border: 2px solid transparent;
+            box-shadow: 0 4px 12px rgba(255, 154, 86, 0.1);
         }
-        .payment-methods input[type="radio"] {
-            margin-right: 10px;
+
+        .payment-method:hover {
+            background: linear-gradient(145deg, #ffede1, #ffd4ba);
+            transform: translateY(-3px);
+            box-shadow: 0 8px 20px rgba(255, 154, 86, 0.2);
         }
-        .confirm-button {
-            background-color: #ff6200;
-            color: #ffffff;
+
+        .payment-method.selected {
+            border-color: #ff6b35;
+            background: linear-gradient(145deg, #ffe4d6, #ffd4ba);
+            box-shadow: 0 8px 20px rgba(255, 107, 53, 0.3);
+        }
+
+        .payment-method input[type="radio"] {
+            margin-right: 15px;
+            transform: scale(1.3);
+            accent-color: #ff6b35;
+        }
+
+        .payment-method-info {
+            flex: 1;
+        }
+
+        .payment-method-title {
+            font-weight: bold;
+            color: #cc4125;
+            margin-bottom: 5px;
+            font-size: 1.1em;
+        }
+
+        .payment-method-desc {
+            color: #8b4513;
+            font-size: 0.9em;
+        }
+
+        .payment-buttons {
+            display: flex;
+            gap: 15px;
+        }
+
+        .btn {
+            flex: 1;
+            padding: 18px;
             border: none;
-            padding: 15px;
-            width: 100%;
-            border-radius: 5px;
-            font-size: 18px;
+            border-radius: 15px;
+            font-size: 1.1em;
+            font-weight: bold;
             cursor: pointer;
-            transition: background-color 0.3s;
+            transition: all 0.3s ease;
+            text-transform: uppercase;
+            letter-spacing: 1px;
         }
-        .confirm-button:hover {
-            background-color: #e55a00;
+
+        .btn-primary {
+            background: linear-gradient(45deg, #ff6b35, #f7931e);
+            color: white;
+            box-shadow: 0 4px 15px rgba(255, 107, 53, 0.3);
+        }
+
+        .btn-primary:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 8px 20px rgba(255, 107, 53, 0.4);
+            background: linear-gradient(45deg, #e55a2b, #e8851a);
+        }
+
+        .btn-secondary {
+            background: linear-gradient(45deg, #d4650a, #cc4125);
+            color: white;
+            box-shadow: 0 4px 15px rgba(204, 65, 37, 0.3);
+        }
+
+        .btn-secondary:hover {
+            background: linear-gradient(45deg, #b8570a, #b33620);
+            transform: translateY(-3px);
+            box-shadow: 0 8px 20px rgba(204, 65, 37, 0.4);
+        }
+
+        .loading {
+            display: none;
+            text-align: center;
+            padding: 20px;
+        }
+
+        .loading-spinner {
+            border: 4px solid #ffe4d6;
+            border-top: 4px solid #ff6b35;
+            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            animation: spin 1s linear infinite;
+            margin: 0 auto 10px;
+        }
+
+        @keyframes spin {
+            0% {
+                transform: rotate(0deg);
+            }
+
+            100% {
+                transform: rotate(360deg);
+            }
+        }
+
+        .success-message {
+            background: linear-gradient(145deg, #d4edda, #c3e6cb);
+            color: #155724;
+            padding: 18px;
+            border-radius: 15px;
+            margin-bottom: 20px;
+            border: 2px solid #28a745;
+            display: none;
+            box-shadow: 0 4px 12px rgba(40, 167, 69, 0.2);
+        }
+
+        .error-message {
+            background: linear-gradient(145deg, #f8d7da, #f5c6cb);
+            color: #721c24;
+            padding: 18px;
+            border-radius: 15px;
+            margin-bottom: 20px;
+            border: 2px solid #dc3545;
+            display: none;
+            box-shadow: 0 4px 12px rgba(220, 53, 69, 0.2);
+        }
+
+        .payment-url {
+            background: linear-gradient(145deg, #fff8f5, #ffe4d6);
+            padding: 20px;
+            border-radius: 15px;
+            margin-top: 20px;
+            text-align: center;
+            display: none;
+            border: 2px solid #ffd4ba;
+            box-shadow: 0 4px 12px rgba(255, 154, 86, 0.1);
+        }
+
+        .payment-url a {
+            color: #ff6b35;
+            text-decoration: none;
+            font-weight: bold;
+            font-size: 1.1em;
+        }
+
+        .payment-url a:hover {
+            text-decoration: underline;
+            color: #e55a2b;
+        }
+
+        .payment-url p {
+            color: #8b4513;
+            margin-bottom: 10px;
+        }
+
+        @media (max-width: 768px) {
+            .container {
+                margin: 10px;
+                padding: 25px;
+            }
+
+            .payment-buttons {
+                flex-direction: column;
+            }
+
+            h1 {
+                font-size: 2em;
+            }
         }
     </style>
 </head>
+
 <body>
     <div class="container">
-        <h2>Thanh Toán Đơn Hàng</h2>
-        
-        <div class="order-summary">
-            <h3>Tóm tắt đơn hàng</h3>
+        <h1>🍽️ Thanh toán</h1>
+
+        <div class="success-message" id="successMessage"></div>
+        <div class="error-message" id="errorMessage"></div>
+
+        <div class="order-info">
+            <h3>Thông tin đơn hàng</h3>
             <div class="order-item">
-                <span>Gà rán (2 miếng)</span>
-                <span>60,000 VNĐ</span>
+                <span>Bàn số:</span>
+                <span id="tableNumber">-</span>
             </div>
             <div class="order-item">
-                <span>Khoai tây chiên</span>
-                <span>25,000 VNĐ</span>
+                <span>Mã đơn hàng:</span>
+                <span id="orderId">-</span>
             </div>
-            <div class="order-item total">
-                <span>Tổng cộng</span>
-                <span>85,000 VNĐ</span>
+            <div class="order-item">
+                <span>Tổng tiền:</span>
+                <span id="totalAmount">0 VNĐ</span>
             </div>
         </div>
 
         <div class="payment-methods">
-            <h3>Phương thức thanh toán</h3>
-            <label><input type="radio" name="payment" value="cash" checked> Tiền mặt</label>
-            <label><input type="radio" name="payment" value="vnpay"> VNPay</label>
+            <h3>Chọn phương thức thanh toán</h3>
+
+            <div class="payment-method" onclick="selectPaymentMethod('CASH')">
+                <input type="radio" name="paymentMethod" value="CASH" id="cash">
+                <div class="payment-method-info">
+                    <div class="payment-method-title">💰 Tiền mặt</div>
+                    <div class="payment-method-desc">Thanh toán trực tiếp bằng tiền mặt với nhân viên</div>
+                </div>
+            </div>
+
+            <div class="payment-method" onclick="selectPaymentMethod('BANKING')">
+                <input type="radio" name="paymentMethod" value="BANKING" id="banking">
+                <div class="payment-method-info">
+                    <div class="payment-method-title">🏦 Chuyển khoản</div>
+                    <div class="payment-method-desc">Thanh toán qua PayOS (QR Code, Internet Banking)</div>
+                </div>
+            </div>
         </div>
 
-        <button class="confirm-button" onclick="confirmPayment()">Xác nhận thanh toán</button>
-    </div>
+        <div class="loading" id="loading">
+            <div class="loading-spinner"></div>
+            <div style="color: #cc4125; font-weight: 600;">Đang xử lý thanh toán...</div>
+        </div>
 
+        <div class="payment-url" id="paymentUrl">
+            <p>Vui lòng thanh toán qua liên kết:</p>
+            <a href="#" target="_blank" id="paymentLink">Thanh toán ngay</a>
+        </div>
+
+        <div class="payment-buttons">
+            <button class="btn btn-primary" onclick="processPayment()">
+                Xác nhận thanh toán
+            </button>
+            <button class="btn btn-secondary" onclick="callStaff()">
+                Gọi nhân viên
+            </button>
+        </div>
+    </div>
+    <script src="js/backend-url.js"></script>
     <script>
-        function confirmPayment() {
-            alert("Đơn hàng của bạn đã được xác nhận! Cảm ơn bạn đã sử dụng FoodHub.");
+        // Configuration
+        let selectedPaymentMethod = null;
+        let sessionData = JSON.parse(localStorage.getItem('qrSession')) || {};
+        let currentOrderId = sessionData.orderId || null;
+        let token = sessionData.token || '';
+
+
+        // Initialize
+        document.addEventListener('DOMContentLoaded', function () {
+            loadOrderInfo();
+        });
+
+        // Load order information
+        function loadOrderInfo() {
+            const urlParams = new URLSearchParams(window.location.search);
+            const tableNumber = urlParams.get('tableNumber');
+            const orderId = currentOrderId || urlParams.get('orderId');
+
+            if (tableNumber) {
+                document.getElementById('tableNumber').textContent = tableNumber;
+            }
+
+            if (orderId) {
+                currentOrderId = orderId;
+                document.getElementById('orderId').textContent = orderId;
+                fetchOrderDetails(orderId);
+            }
         }
+
+        // Fetch order details from API
+        async function fetchOrderDetails(orderId) {
+            try {
+                const response = await fetch(`${BACKEND_BASE_URL}/orders/${orderId}`, {
+                    method: 'GET',
+                    headers: {
+                        'Accept': 'application/json',
+                        'Authorization': `Bearer ${token}`
+                    }
+                });
+                if (response.ok) {
+                    const data = await response.json();
+                    const order = data.result;
+                    console.log('Order details:', order);
+                    document.getElementById('totalAmount').textContent =
+                        formatCurrency(order.totalAmount) + ' VNĐ';
+                }
+            } catch (error) {
+                console.error('Error fetching order details:', error);
+            }
+        }
+
+        // Select payment method
+        function selectPaymentMethod(method) {
+            selectedPaymentMethod = method;
+
+            // Remove previous selection
+            document.querySelectorAll('.payment-method').forEach(el => {
+                el.classList.remove('selected');
+            });
+
+            // Add selection to current method
+            document.getElementById(method.toLowerCase()).closest('.payment-method').classList.add('selected');
+            document.getElementById(method.toLowerCase()).checked = true;
+        }
+
+        // Process payment
+        async function processPayment() {
+            if (!selectedPaymentMethod) {
+                showError('Vui lòng chọn phương thức thanh toán');
+                return;
+            }
+
+            if (!currentOrderId) {
+                showError('Không tìm thấy thông tin đơn hàng');
+                return;
+            }
+
+            showLoading(true);
+            hideMessages();
+
+            try {
+                const paymentRequest = {
+                    orderId: parseInt(currentOrderId),
+                    paymentMethod: selectedPaymentMethod
+                };
+
+                const response = await fetch(`${BACKEND_BASE_URL}/payments`, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'Authorization': `Bearer ${token}`
+                    },
+                    body: JSON.stringify(paymentRequest)
+                });
+
+                const data = await response.json();
+
+                if (response.ok) {
+                    handlePaymentSuccess(data.result);
+                } else {
+                    showError(data.message || 'Có lỗi xảy ra khi xử lý thanh toán');
+                }
+            } catch (error) {
+                console.error('Payment error:', error);
+                showError('Không thể kết nối đến máy chủ');
+            } finally {
+                showLoading(false);
+            }
+        }
+
+        // Handle payment success
+        function handlePaymentSuccess(paymentData) {
+            if (selectedPaymentMethod === 'CASH') {
+                showSuccess('Yêu cầu thanh toán tiền mặt đã được gửi. Nhân viên sẽ đến trong giây lát.');
+            } else if (selectedPaymentMethod === 'BANKING') {
+                if (paymentData.paymentUrl) {
+                    showPaymentUrl(paymentData.paymentUrl);
+                    showSuccess('Vui lòng thanh toán qua liên kết bên dưới');
+                } else {
+                    showSuccess('Thanh toán đã được tạo thành công');
+                }
+            }
+        }
+
+        // Show payment URL
+        function showPaymentUrl(url) {
+            const paymentUrlDiv = document.getElementById('paymentUrl');
+            const paymentLink = document.getElementById('paymentLink');
+
+            paymentLink.href = url;
+            paymentUrlDiv.style.display = 'block';
+        }
+
+        // Call staff for cash payment
+        function callStaff() {
+            const tableNumber = document.getElementById('tableNumber').textContent;
+            if (confirm(`Bạn có muốn gọi nhân viên đến thanh toán cho bàn ${tableNumber} không?`)) {
+                showSuccess('Đã gửi yêu cầu gọi nhân viên. Nhân viên sẽ đến trong giây lát.');
+            }
+        }
+
+        // Utility functions
+        function showLoading(show) {
+            document.getElementById('loading').style.display = show ? 'block' : 'none';
+        }
+
+        function showSuccess(message) {
+            const successDiv = document.getElementById('successMessage');
+            successDiv.textContent = message;
+            successDiv.style.display = 'block';
+        }
+
+        function showError(message) {
+            const errorDiv = document.getElementById('errorMessage');
+            errorDiv.textContent = message;
+            errorDiv.style.display = 'block';
+        }
+
+        function hideMessages() {
+            document.getElementById('successMessage').style.display = 'none';
+            document.getElementById('errorMessage').style.display = 'none';
+            document.getElementById('paymentUrl').style.display = 'none';
+        }
+
+        function formatCurrency(amount) {
+            return new Intl.NumberFormat('vi-VN').format(amount);
+        }
+
+        // Check payment status periodically for banking payments
+        async function checkPaymentStatus() {
+            if (selectedPaymentMethod === 'BANKING' && currentOrderId) {
+                const token = sessionData.token || '';
+                try {
+                    const response = await fetch(`${BACKEND_BASE_URL}/payments/status/${currentOrderId}`, {
+                        method: 'GET',
+                        headers: {
+                            'Accept': 'application/json',
+                            'Authorization': `Bearer ${token}`
+                        }
+                    });
+
+                    if (!response.ok) {
+                        console.warn(`Check payment status failed: ${response.status}`);
+                        return;
+                    }
+
+                    const data = await response.json();
+
+                    if (data && data.result && data.result.status === 'PAID') {
+                        showSuccess('Thanh toán thành công! Cảm ơn bạn đã sử dụng dịch vụ.');
+                        document.getElementById('paymentUrl').style.display = 'none';
+
+                        setTimeout(() => {
+                            window.location.href = 'home-page.html';
+                        }, 3000);
+                    }
+                } catch (error) {
+                    console.error('Error checking payment status:', error);
+                }
+            }
+        }
+
+        // Check payment status every 5 seconds
+        setInterval(checkPaymentStatus, 5000);
     </script>
 </body>
+
 </html>
